--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     color: #fff;
     font-family: 'Helvetica';
+    font-size: 14px;
 }
 
 .screenpage {
@@ -12,10 +13,13 @@ body {
     box-sizing: border-box;
 }
 .container {
-    margin: 5px;
+    margin: 10px 5px;
     padding: 5px;
-    border: solid 1px #88f;
+    border: solid 2px #88f;
     border-radius: 4px;
+}
+.container > :last-child {
+    margin-bottom: 0;
 }
 button {
     border: solid 2px #fff;
@@ -32,8 +36,11 @@ button {
 }
 select,input[type="text"],input[type="number"] {
     border-radius: 4px;
+    border: solid 1px #fff;
     background: none;
     color: #fff;
+    box-sizing: border-box;
+    padding: 5px;
 }
 
 button:disabled {
@@ -62,12 +69,17 @@ button:disabled {
 .input-group-fix {
     width: 1%;
 }
+.text-cell {
+    padding: 5px 10px 5px 5px;
+    border: solid 1px #888;
+    line-height: 0.8;
+    color: #aaa;
+    vertical-align: middle;
+}
 
-
-#choose-counter-1 {
+#choose-counter-1, #choose-counter-2 {
     width: 100%;
     height: 40px;
-    padding: 5px;
 }
 #cnt-start {
     height: 40px;
@@ -141,8 +153,32 @@ button:disabled {
 }
 
 #view-interval {
-    width: 60px;
+    width: 100%;
+    height: 40px;
+}
+#choose-view-data {
+    width: 100%;
+    min-width: 80px;
+    height: 40px;
 }
 #chart{
     height: 300px;
+}
+#export {
+    width: 90px;
+    height: 40px;
+}
+#choose-export-format {
+    width: 100%;
+    height: 40px;
+}
+
+#ctr-name {
+    width: 100%;
+    height: 40px;
+}
+
+#del-ctr, #add-ctr {
+    width: 50%;
+    height: 40px;
 }
